WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248937
[Live Range Selection] editing/selection/shift-click.html fails
https://bugs.webkit.org/show_bug.cgi?id=248937
Summary
[Live Range Selection] editing/selection/shift-click.html fails
Ryosuke Niwa
Reported
2022-12-08 01:20:07 PST
When enabling live range selection, editing/selection/shift-click.html starts to fail.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-12-08 01:30:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7313
EWS
Comment 2
2022-12-08 16:11:08 PST
Committed
257594@main
(279c1617bd96): <
https://commits.webkit.org/257594@main
> Reviewed commits have been landed. Closing PR #7313 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-12-08 16:12:21 PST
<
rdar://problem/103157400
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug