[Live Range Selection] editing/selection/shift-click.html fails https://bugs.webkit.org/show_bug.cgi?id=248937

Reviewed by Darin Adler.

The bug was caused by handleMousePressEventSingleClick failing to expand the base appropriately with respect
to granularity when we're about to flip the direction of selection (e.g. base < extent to extent < base)
as in webkit.org/b/248204. Like https://commits.webkit.org/256964@main, fixed the bug by expanding the base
when the directionality of selection changes. In particular, reuse & trigger the very code added in that commit.

* LayoutTests/editing/selection/shift-click-expected.txt:
* LayoutTests/editing/selection/shift-click-live-range-expected.txt: Copied from
LayoutTests/editing/selection/shift-click-expected.txt.
* LayoutTests/editing/selection/shift-click-live-range.html: Copied from
LayoutTests/editing/selection/shift-click.html.
* LayoutTests/editing/selection/shift-click.html: Shift + Click in Windows now correctly selects trailing whitespace.
* LayoutTests/platform/ios/TestExpectations:

* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::handleMousePressEventSingleClick):

Canonical link: https://commits.webkit.org/257594@main